cli/tests/snapshots/integration__run_images@overlay_align_offset2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="137.0" height="137.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 60.0 106.27503 A 30.0 30.0 0.0 0 1 0.0 106.27503 A 30.0 30.0 0.0 0 1 60.0 106.27503 Z" fill="rgba(100, 149, 237, 1.0)" />
    <path d="M 63.137515 126.27503 L 16.18034 92.158645 L 16.18034 34.116385 L 63.137515 0.0 L 118.338985 17.936045 L 136.27503 73.137515 L 102.158645 120.09469 L 44.116385 120.09469 L 10.0 73.137515 L 27.936045 17.936045 L 83.137515 0.0 L 130.09469 34.116385 L 130.09469 92.158645 L 83.137515 126.27503 L 27.936045 108.338985 L 10.0 53.137515 L 44.116385 6.18034 L 102.158645 6.18034 L 136.27503 53.137515 L 118.338985 108.338985 Z" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
